# mcp-server

./: README.md  pyproject.toml
.github/workflows/: release.yml
calibre_plugin/: __init__.py  about.txt  action.py  client_dialog.py  config.py  controller.py  main.py  provider_client.py  providers.py  recherche_agent.py  server_runner.py  ui.py
src/calibre_mcp_server/: __init__.py  config.py  config_loader.py  http_server.py  main.py  mcp_protocol.py  secure_http_server.py  websocket_server.py
src/calibre_mcp_server/core/: __init__.py  models.py  plugin_base.py  plugin_registry.py  service.py
src/calibre_mcp_server/infra/: metadata_sqlite.py
src/calibre_mcp_server/tools/: __init__.py  excerpt_tool.py  ft_search_tool.py
tests/: inspect_metadata_isbn.py  manual_test_service.py  manual_test_websocket_connectivity.py  test_server_runner.py
